seguridad mejorada y metodos agregados